Giao Dien Trang Chu Admin

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ASM_SOF203
-main.class=asm_sof203.ASM_SOF203
+main.class=view.Form_Trang_Chu
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
