--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,9 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ASM_SOF203
 endorsed.classpath=
 excludes=
+file.reference.mssql-jdbc-12.8.1.jre8.jar=lib\\mssql-jdbc-12.8.1.jre8.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mssql-jdbc-12.8.1.jre8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
