--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,7 +39,8 @@ file.reference.mssql-jdbc-12.8.1.jre8.jar=lib\\mssql-jdbc-12.8.1.jre8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mssql-jdbc-12.8.1.jre8.jar}
+    ${file.reference.mssql-jdbc-12.8.1.jre8.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
